--- a/work14/index1.css
+++ b/work14/index1.css
@@ -9,7 +9,7 @@
 .box .count {
     width: 60px;
     color: #666;
-    font-size: 200px;
+    font-size: 280%;
     line-height: 50px;
     padding-left: 6px;
     margin-left: 5px;
